#108: Better fix for invisible input text on iOS.
Previous fix made it impossible to select text in input controls, or even position the cursor. New fix resolve both that problem and the initial problem with input values being invisible, by simply enabling GPU rendering.

--- a/templates/_BaseGeneric2/mobile.css
+++ b/templates/_BaseGeneric2/mobile.css
@@ -38,12 +38,8 @@ div.TPLMenuMobile
 	{
 		/* -webkit-overflow-scrolling:touch added above is required to enable scrolling in Safari on iOS.
 		   But unfortunately it comes with other problems such as text being hidden while typing in input fields.
-		   Applying a negative z-index to input controls solve that particular problem.
-		   If this work around for some reason proves to cause other problems, another approach could be to
-		   change -webkit-overflow-scrolling to 'auto' on <body> while an input field has focus, although it will
-		   prevent scrolling until reverted to 'touch' again. Obviously it would also require JavaScript. */
-		position: relative;
-		z-index: -1; /* NOTICE: Will make it impossible to place cursor or select text using long touch */
+		   Applying GPU rendering resolves that particular problem. */
+		-webkit-transform: translate3d(0, 0, 0);
 	}
 }
 @media (max-width: 900px)
